RESOLVED FIXED182801
Setting a VMTrap shouldn't look at topCallFrame since that may imply we're in C code and holding the malloc lock
https://bugs.webkit.org/show_bug.cgi?id=182801
Summary Setting a VMTrap shouldn't look at topCallFrame since that may imply we're in...
Saam Barati
Reported 2018-02-14 11:32:44 PST
...
Attachments
patch (7.90 KB, patch)
2018-02-14 12:23 PST, Saam Barati
keith_miller: review+
patch for landing (6.61 KB, patch)
2018-02-14 13:31 PST, Saam Barati
no flags
Saam Barati
Comment 1 2018-02-14 12:23:22 PST
Keith Miller
Comment 2 2018-02-14 12:26:10 PST
Comment on attachment 333828 [details] patch r=me.
Saam Barati
Comment 3 2018-02-14 13:25:33 PST
Comment on attachment 333828 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=333828&action=review > Tools/Scripts/run-jsc-stress-tests:725 > + runFTLEagerWatchdog if rand(100) < 15 Gonna do this in a follow up patch. It requires some other changes.
Saam Barati
Comment 4 2018-02-14 13:31:10 PST
Created attachment 333834 [details] patch for landing
Saam Barati
Comment 5 2018-02-14 15:04:18 PST
WebKit Commit Bot
Comment 6 2018-02-14 15:25:58 PST
Comment on attachment 333834 [details] patch for landing Clearing flags on attachment: 333834 Committed r228488: <https://trac.webkit.org/changeset/228488>
WebKit Commit Bot
Comment 7 2018-02-14 15:26:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.